# rag-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  GEMINI.md  PRD.md  README.md  architecture_rag_agent.excalidraw  docker-compose.yml  pyproject.toml
.ai/agents/: codebase-explorer-expert.md  devops-expert.md  langgraph-architect-expert.md  n8n-convertor-expert.md  prompt-engineer-expert.md  python-developer-expert.md  security-reviewer-expert.md  testing-expert.md
.ai/commands/: README.md  debug.md  epct.md
.ai/shared-context/: rules.md  session-active.md
.ai/shared-context/session-history/: session-001-migration-rag.md  session-002-google-drive.md  session-003-deployment-validation.md
.ai/skills/: README.md  cohere-api.md  docker.md  fastapi.md  google-apis.md  integrations.md  langchain.md  langgraph.md  n8n.md  notion-api.md  postgresql-sqlalchemy.md  pydantic.md  telegram-api.md  uv.md  whatsapp-api.md
.planning/: PROJECT.md  REQUIREMENTS.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
n8n_assets/: Add_Documents_Workflow.json  Chat_RAG_Main.json
scripts/: check_db.py  init_db.sql  test_google_drive.py  test_vector_store.py
src/: main.py  worker.py
src/agents/workflows/: example_workflow.py  rag_workflow.py
src/api/: app.py  auth.py  schemas.py
src/api/routes/: chat.py  ingest.py
src/config/: database.py  logging.py  settings.py
src/graphs/: edges.py  nodes.py  state.py
src/rag/: embeddings.py  retriever.py
src/tools/google/: auth.py  drive.py
tests/: conftest.py
tests/integration/: test_chat_api.py  test_ingest_api.py
tests/unit/api/: test_app.py
tests/unit/rag/: test_embeddings.py
